--- a/requirements.txt
+++ b/requirements.txt
@@ -44,5 +44,5 @@ aioboto3
 nano-vectordb
 ollama
 xxhash
-"lightrag-hku<=1.3.0"
-"pdfservices-sdk@git+https://github.com/niallcm/pdfservices-python-sdk.git@bump-and-unfreeze-requirements"
+lightrag-hku<=1.3.0
+pdfservices-sdk@git+https://github.com/niallcm/pdfservices-python-sdk.git@bump-and-unfreeze-requirements
