--- a/libs/kotaemon/pyproject.toml
+++ b/libs/kotaemon/pyproject.toml
@@ -56,10 +56,10 @@ dependencies = [
     "python-decouple", # for theflow
     "python-docx>=1.1.0,<1.2",
     "python-dotenv>=1.0.1,<1.1",
-    "tenacity>=8.2.3,<8.3",
+    "tenacity>=9.0.0,<10.0.0",
     "theflow>=0.8.6,<0.9.0",
     "trogon>=0.5.0,<0.6",
-    "umap-learn==0.5.5",
+    "umap-learn>=0.5.6,<0.6.0",
     "tavily-python>=0.4.0",
     "pydantic<=2.10.6",
 ]
