--- a/libs/kotaemon/pyproject.toml
+++ b/libs/kotaemon/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "cohere>=5.3.2,<6",
     "cookiecutter>=2.6.0,<2.7",
     "fast_langdetect",
-    "fastapi<=0.112.1",
+    "fastapi", # Loosened version constraint
     "gradio>=4.31.0,<4.40",
     "html2text==2024.2.26",
     "langchain>=0.1.16,<0.2.16",
@@ -47,16 +47,16 @@ dependencies = [
     "matplotlib",
     "matplotlib-inline",
     "openpyxl>=3.1.2,<3.2",
-    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0", # https://github.com/chroma-core/chroma/issues/2571
+    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
     "pandas>=2.2.2,<2.3",
     "plotly<6.0.0",
     "PyMuPDF>=1.23,<=1.24.11",
     "pypdf>=4.2.0,<4.3",
     "pylance",
-    "python-decouple", # for theflow
+    "python-decouple",
     "python-docx>=1.1.0,<1.2",
     "python-dotenv>=1.0.1,<1.1",
-    "tenacity>=8.5.0,<9.0.0",
+    "tenacity>=9.0.0,<10.0.0",
     "theflow>=0.8.6,<0.9.0",
     "trogon>=0.5.0,<0.6",
     "umap-learn>=0.5.6,<0.6.0",
