--- a/libs/kotaemon/pyproject.toml
+++ b/libs/kotaemon/pyproject.toml
@@ -27,11 +27,11 @@ dependencies = [
     "cohere>=5.3.2,<6",
     "cookiecutter>=2.6.0,<2.7",
     "fast_langdetect",
-    "fastapi", # Loosened version constraint
+    "fastapi",
     "gradio>=4.31.0,<4.40",
     "html2text==2024.2.26",
-    "langchain>=0.1.16,<0.2.16",
-    "langchain-community>=0.0.34,<=0.2.11",
+    "langchain>=0.1.16",
+    "langchain-community>=0.0.34",
     "langchain-openai>=0.1.4,<0.2.0",
     "langchain-google-genai>=1.0.3,<2.0.0",
     "langchain-anthropic",
@@ -39,7 +39,7 @@ dependencies = [
     "langchain-mistralai",
     "langchain-cohere>=0.2.4,<0.3.0",
     "llama-hub>=0.0.79,<0.1.0",
-    "llama-index>=0.10.40,<0.11.0",
+    "llama-index>=0.10.40",
     "chromadb<=0.5.16",
     "llama-index-vector-stores-chroma>=0.1.9",
     "llama-index-vector-stores-lancedb",
@@ -56,12 +56,10 @@ dependencies = [
     "python-decouple",
     "python-docx>=1.1.0,<1.2",
     "python-dotenv>=1.0.1,<1.1",
-    "tenacity>=9.0.0,<10.0.0",
     "theflow>=0.8.6,<0.9.0",
     "trogon>=0.5.0,<0.6",
     "umap-learn>=0.5.6,<0.6.0",
     "tavily-python>=0.4.0",
-    "pydantic<=2.10.6",
 ]
 readme = "README.md"
 authors = [
@@ -83,7 +81,7 @@ adv = [
     "onnxruntime<v1.20",
     "googlesearch-python>=1.2.4,<1.3",
     "llama-cpp-python<0.2.8",
-    "llama-index>=0.10.40,<0.11.0",
+    "llama-index>=0.10.40",
     "llama-index-vector-stores-milvus",
     "llama-index-vector-stores-qdrant",
     "sentence-transformers",
