--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,53 @@
 # Main Application Dependencies
-fastapi
-uvicorn[standard]>=0.18.3
-python-dotenv<1.1,>=1.0.1
-Jinja2<4.0.0,>=2.7
-
-# Core Kotaemon and Ktem libraries (editable install)
--e libs/kotaemon[adv]
--e libs/ktem
+fastapi==0.111.0
+uvicorn[standard]==0.29.0
+python-dotenv==1.0.1
+Jinja2==3.1.4
 
 # GraphRAG and related dependencies
-graphrag<=0.3.6
-future
-torch
-torchvision
-torchaudio
+graphrag==0.3.6
+future==1.0.0
+torch==2.5.1+cpu
+torchvision==0.20.1+cpu
+torchaudio==2.5.1+cpu
 
 # Document processing and unstructured data
-unstructured[all-docs]
-pikepdf
-pdfminer.six
-python-pptx>=1.0.1
-xlrd
-unstructured.pytesseract>=0.3.12
-pdf2image
-pypandoc
+unstructured[all-docs]==0.15.14
+pikepdf==9.10.2
+pdfminer.six==20221105
+python-pptx==1.0.2
+xlrd==2.0.2
+unstructured.pytesseract==0.3.15
+pdf2image==1.17.0
+pypandoc==1.15
 
 # AI and Machine Learning
-sentence-transformers
-voyageai>=0.3.0
-llama-cpp-python<0.2.8
-onnxruntime<1.20
-fastembed
+sentence-transformers==5.0.0
+voyageai==0.3.3
+llama-cpp-python==0.2.7
+onnxruntime==1.19.2
+fastembed==0.7.1
 
 # Vector Stores and Search
-qdrant-client>=1.7.1
-llama-index-vector-stores-qdrant
-pymilvus<3,>=2.5.10
-llama-index-vector-stores-milvus
-elasticsearch<8.14,>=8.13.0
+qdrant-client==1.15.0
+llama-index-vector-stores-qdrant==0.6.1
+pymilvus==2.5.13
+llama-index-vector-stores-milvus==0.8.6
+elasticsearch==8.13.2
 
 # Other utilities
-aioboto3
-nano-vectordb
-ollama
-xxhash
-lightrag-hku<=1.3.0
+aioboto3==15.0.0
+nano-vectordb==0.0.4.3
+ollama==0.5.1
+xxhash==3.5.0
+lightrag-hku==1.3.0
 pdfservices-sdk@git+https://github.com/niallcm/pdfservices-python-sdk.git@bump-and-unfreeze-requirements
+
+# Explicitly pinned versions to resolve deep conflicts
+tenacity==9.1.2
+umap-learn==0.5.6
+pydantic==2.7.1
+
+# Local libraries that will be handled by PYTHONPATH in the Dockerfile
+# -e libs/kotaemon[adv]
+# -e libs/ktem
