--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
+# Tell pip to look for the following packages on PyTorch's server first
+--index-url https://download.pytorch.org/whl/cpu
+
+# Pinned PyTorch versions
+torch==2.5.1+cpu
+torchvision==0.20.1+cpu
+torchaudio==2.5.1+cpu
+
 # Main Application Dependencies
 fastapi==0.111.0
 uvicorn[standard]==0.29.0
 python-dotenv==1.0.1
 Jinja2==3.1.4
 
+# Core Kotaemon and Ktem libraries are handled via PYTHONPATH in the Dockerfile
+
 # GraphRAG and related dependencies
 graphrag==0.3.6
 future==1.0.0
-torch==2.5.1+cpu
-torchvision==0.20.1+cpu
-torchaudio==2.5.1+cpu
 
 # Document processing and unstructured data
 unstructured[all-docs]==0.15.14
@@ -47,7 +54,3 @@ pdfservices-sdk@git+https://github.com/niallcm/pdfservices-python-sdk.git@bump-a
 tenacity==9.1.2
 umap-learn==0.5.6
 pydantic==2.7.1
-
-# Local libraries that will be handled by PYTHONPATH in the Dockerfile
-# -e libs/kotaemon[adv]
-# -e libs/ktem
