--- a/libs/kotaemon/pyproject.toml
+++ b/libs/kotaemon/pyproject.toml
@@ -22,44 +22,46 @@ requires-python = ">= 3.10"
 description = "Kotaemon core library for AI development."
 dependencies = [
     "azure-ai-documentintelligence",
-    "beautifulsoup4>=4.12.3,<4.13",
-    "click>=8.1.7,<9",
-    "cohere>=5.3.2,<6",
-    "cookiecutter>=2.6.0,<2.7",
+    "beautifulsoup4==4.12.3",
+    "click==8.1.7",
+    "cohere==5.3.3",
+    "cookiecutter==2.6.0",
     "fast_langdetect",
-    "fastapi",
-    "gradio>=4.31.0,<4.40",
+    "fastapi==0.111.0",
+    "gradio==4.31.0",
     "html2text==2024.2.26",
-    "langchain>=0.1.16",
-    "langchain-community>=0.0.34",
-    "langchain-openai>=0.1.4,<0.2.0",
-    "langchain-google-genai>=1.0.3,<2.0.0",
-    "langchain-anthropic",
-    "langchain-ollama",
-    "langchain-mistralai",
-    "langchain-cohere>=0.2.4,<0.3.0",
-    "llama-hub>=0.0.79,<0.1.0",
-    "llama-index>=0.10.40",
-    "chromadb<=0.5.16",
-    "llama-index-vector-stores-chroma>=0.1.9",
-    "llama-index-vector-stores-lancedb",
-    "openai>=1.23.6,<2",
-    "matplotlib",
+    "langchain==0.1.16",
+    "langchain-community==0.0.34",
+    "langchain-openai==0.1.4",
+    "langchain-google-genai==1.0.3",
+    "langchain-anthropic==0.1.9",
+    "langchain-ollama==0.1.3",
+    "langchain-mistralai==0.1.3",
+    "langchain-cohere==0.2.4",
+    "llama-hub==0.0.79",
+    "llama-index==0.10.40",
+    "chromadb==0.4.24",
+    "llama-index-vector-stores-chroma==0.1.9",
+    "llama-index-vector-stores-lancedb==0.1.7",
+    "openai==1.23.6",
+    "matplotlib==3.8.2",
     "matplotlib-inline",
-    "openpyxl>=3.1.2,<3.2",
-    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
-    "pandas>=2.2.2,<2.3",
-    "plotly<6.0.0",
-    "PyMuPDF>=1.23,<=1.24.11",
-    "pypdf>=4.2.0,<4.3",
+    "openpyxl==3.1.2",
+    "opentelemetry-exporter-otlp-proto-grpc==1.25.0",
+    "pandas==2.2.2",
+    "plotly==5.22.0",
+    "PyMuPDF==1.24.1",
+    "pypdf==4.2.0",
     "pylance",
-    "python-decouple",
-    "python-docx>=1.1.0,<1.2",
-    "python-dotenv>=1.0.1,<1.1",
-    "theflow>=0.8.6,<0.9.0",
-    "trogon>=0.5.0,<0.6",
-    "umap-learn>=0.5.6,<0.6.0",
-    "tavily-python>=0.4.0",
+    "python-decouple==3.8",
+    "python-docx==1.1.0",
+    "python-dotenv==1.0.1",
+    "tenacity>=9.0.0,<10.0.0",
+    "theflow==0.8.6",
+    "trogon==0.5.0",
+    "umap-learn==0.5.6",
+    "tavily-python==0.4.0",
+    "pydantic==2.7.1",
 ]
 readme = "README.md"
 authors = [
@@ -78,7 +80,7 @@ adv = [
     "duckduckgo-search>=6.1.0,<6.2",
     "elasticsearch>=8.13.0,<8.14",
     "fastembed",
-    "onnxruntime<v1.20",
+    "onnxruntime<1.20",
     "googlesearch-python>=1.2.4,<1.3",
     "llama-cpp-python<0.2.8",
     "llama-index>=0.10.40",
