--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ uvicorn[standard]==0.29.0
 python-dotenv==1.0.1
 Jinja2==3.1.4
 
+# Core Kotaemon and Ktem libraries are handled via PYTHONPATH in the Dockerfile
+
 # GraphRAG and related dependencies
 graphrag==0.3.6
 future==1.0.0
