--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ nano-vectordb==0.0.4.3
 ollama==0.5.1
 xxhash==3.5.0
 lightrag-hku==1.3.0
-pdfservices-sdk@git+https://github.com/niallcm/pdfservices-python-sdk.git@bump-and-unfreeze-requirements
+cryptography>=36.0.0
 
 # Explicitly pinned versions to resolve deep conflicts
 tenacity==9.1.2
